Changing user's default profile picture

--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -70,7 +70,7 @@
     <div class="container__full">
       <div class="profile-form" [formGroup]="basicInfoForm">
         <div class="profile-form__image">
-          <img alt="Profile Image" src="assets/icons/profile-image.svg">
+          <img alt="Profile Image" src="../../../../assets/icons/people-default.svg">
         </div>
         <h3 class="profile-form__title">
           BASIC INFORMATION
@@ -608,6 +608,5 @@
   </mat-datepicker> -->
   
   <!-- Create_Profile_Status end -->
-  
   
   
