--- a/client/src/app/components/header-section/header-section.component.scss
+++ b/client/src/app/components/header-section/header-section.component.scss
@@ -149,6 +149,40 @@ small {
     justify-content: space-between;
     align-items: flex-end;
   }
+  .edit-form {
+    @include flex(row, center, flex-start);
+    .form-field {
+      margin: 0 5px 10px 5px;
+      display: inline-grid;
+      grid-template: 
+        "field" auto 
+        / 280px;
+      border: solid 1px $mat-form-border-color;
+      border-radius: 5px;
+      padding: 0;
+      &.name-field {
+        grid-template: 
+        "first last" auto 
+        / 130px 150px;
+      }
+      mat-form-field {
+        grid-area: field;
+        &.first-name {
+          grid-area: first;
+        }
+        &.last-name {
+          grid-area: last;
+        }
+        img {
+          width: 30px;
+          height: 30px;
+        }
+        input.hide {
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
