--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template:
   " hero hero " auto 
-  " lege lege " 60px
+  " lege edit " 60px
   " left main " auto
   / 300px auto
   ;
@@ -26,6 +26,18 @@ legend {
   margin-left: 40px;
   h3 {
     color: map-get($md-cfaccent, 300);
+  }
+}
+
+.edit-button {
+  grid-area: edit;
+  margin-right: 40px;
+  @include flex(row, center, flex-end);
+  a {
+    font-size: 12px;
+    color: map-get($md-cfprimary, 500);
+    @include disable-select();
+    cursor: pointer;
   }
 }
 
