--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -10,6 +10,10 @@
   .row {
     padding: 15px;
     border-bottom: 1px solid map-get($md-cfaccent, 50);
+    .btn-container {
+      text-align: center;
+      padding: 10px 0;
+    }
   }
   simple-tag {
     display: inline-flex;
@@ -17,8 +21,9 @@
   action-button {
     display: inline-flex;
     margin-right: 20px;
-    &.read-more {
+    &.edit-btn {
       margin-right: 0;
+      width: 190px;
     }
   }
   a {
