--- a/client/src/app/components/nav-section/nav-section.component.scss
+++ b/client/src/app/components/nav-section/nav-section.component.scss
@@ -4,56 +4,63 @@
   grid-area: left;
   margin-left: 40px;
   nav {
-    position: relative;
-    padding: 15px;
-    height: fit-content;
-    background: white;
-    border-radius: 5px;
-    margin-bottom: 2px;
-    h3 {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-    }
-    ol {
-      color: gray;
-      font-size: 0.8em;
-      display: none;
-      li {
-        margin-bottom: 10px;
-        &:hover {
+    .nav-section {
+      position: relative;
+      padding: 15px;
+      height: fit-content;
+      background: white;
+      border-radius: 5px;
+      margin-bottom: 2px;
+      h3 {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+      }
+      ol {
+        color: gray;
+        font-size: 0.8em;
+        display: none;
+        li {
+          margin-bottom: 10px;
+          &:hover {
+            color: map-get($md-cfprimary, 500);
+            cursor: pointer;
+          }
+        }
+      }
+      mat-icon {
+        position: absolute;
+        right: 15px;
+        top: 18px;
+        display: none;
+      }
+      &.active {
+        color: map-get($md-cfprimary, 500);
+        h3 {
           color: map-get($md-cfprimary, 500);
-          cursor: pointer;
+        }
+        ol {
+          display: block;
+        }
+        mat-icon {
+          display: block;
+        }
+        &:before {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 10px;
+          width: 4px;
+          height: 39px;
+          border-top-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+          background-color: map-get($md-cfprimary, 500);
         }
       }
     }
-    mat-icon {
-      position: absolute;
-      right: 15px;
-      top: 18px;
-      display: none;
+    .btn-section {
+      padding: 40px 0;
+      text-align: center;
     }
-    &.active {
-      color: map-get($md-cfprimary, 500);
-      h3 {
-        color: map-get($md-cfprimary, 500);
-      }
-      ol {
-        display: block;
-      }
-      mat-icon {
-        display: block;
-      }
-      &:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 10px;
-        width: 4px;
-        height: 39px;
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-        background-color: map-get($md-cfprimary, 500);
-      }
-    }
+    
   }
 }
