--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -213,6 +213,7 @@ $container-max-width: 1365px;
 
 $mat-form-bg-color: #ecf3fc;
 $secondary-bg-color: #f5f8fa;
+$third-bg-color: #f4f5f8;
 $mat-form-border-color: #dae4f1;
 $mat-form-prefix-color: #525252;
 
