--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -430,6 +430,10 @@ action-button {
       padding: 10px 0 !important;
     }
   }
+  &.update-btn {
+    margin-top: 30px;
+    min-width: 150px;
+  }
 }
 
 .container {
@@ -440,4 +444,22 @@ action-button {
   width: 100%;
   max-width: $container-max-width;
   box-sizing: border-box;
+}
+
+mat-dialog-container {
+  position: relative;
+  width: 100vw !important;
+  border-radius: 20px !important;
+  max-width: 880px !important;
+  min-width: 310px !important;
+  dialog-content {
+    width: 100%;
+    @include flex(column, center, flex-start);
+    mat-icon.cancel {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: map-get($md-cfprimary, 500);
+    }
+  }
 }
