--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!isProfileLoading" class="profile-header">
-  <header-section [editMode]="isEditProfile" [generalInfo]="userGeneralInfo"></header-section>
+  <header-section [editMode]="isEditProfile" [generalInfo]="userGeneralInfo" (updatedGeneralInfoData)="onChangedGeneralInfoData($event)"></header-section>
 </ng-container>
 
 <ng-container *ngIf="!isProfileLoading">
@@ -8,7 +8,7 @@
     <a (click)="onClickEdit()">Edit Profile</a>
   </legend>
   <div class="edit-button"><a (click)="onClickEdit()">Edit Profile</a></div>
-  <nav-section [navMenu]="navMenu" [editMode]="isEditProfile"></nav-section>
+  <nav-section [navMenu]="navMenu" [editMode]="isEditProfile" (clickUpdate)="onClickUpdate()"></nav-section>
   <main-section
     [selectedNavMenu]="'profile'"
     [userGeneralInfo]="userGeneralInfo"
