--- a/client/src/app/components/main-section/main-section.component.html
+++ b/client/src/app/components/main-section/main-section.component.html
@@ -15,8 +15,11 @@
     <h3> Education </h3>
     <ng-container *ngFor="let education of educationList; let i = index">
       <a href="/my-profile">{{education.user_specified_school_name ? education.user_specified_school_name : education.school_name}}</a>
-      <h4>{{education.education_level}}{{education.major_name ? ' - ' + education.major_name : ''}}</h4>
-      <small>{{helperService.convertToFormattedString(education.start_date, 'YYYY')}} - {{helperService.convertToFormattedString(education.graduation_date, 'YYYY')}}</small>
+      <div class="detail-info">
+        <h4 class="detail-info__left-top">{{education.education_level}}{{education.major_name ? ' - ' + education.major_name : ''}}</h4>
+        <small class="detail-info__left-bottom">{{helperService.convertToFormattedString(education.start_date, 'YYYY')}} - {{helperService.convertToFormattedString(education.graduation_date, 'YYYY')}}</small>
+        <h4 *ngIf="education.gpa" class="detail-info__right_all">{{education.gpa}} GPA</h4>
+      </div>
       <ng-container *ngIf="true; let short_desc">
         <p *ngIf="education.edu_desc" [class.short-desc]="short_desc && education.edu_desc.length > helperService.shortDescLength">
           {{short_desc ? helperService.shortDescription(education.edu_desc) : education.edu_desc}}
@@ -32,7 +35,7 @@
 
   <div *ngIf="(experienceList && experienceList.length > 0) || editMode" class="row">
     <h3> Work Experience </h3>
-    <ng-container *ngFor="let experience of experienceList; let i = inde;">
+    <ng-container *ngFor="let experience of experienceList; let i = index;">
       <a href="/my-profile">{{experience.user_specified_company_name ? experience.user_specified_company_name : experience.company_name}}</a>
       <h4>{{experience.job}}</h4>
       <small>{{helperService.convertToFormattedString(experience.start_date, 'MMM, YYYY')}} - {{(experience.end_date ? helperService.convertToFormattedString(experience.end_date, 'MMM, YYYY') : 'Present')}}</small>
@@ -63,7 +66,7 @@
 
   <div *ngIf="(userPublicationsList && userPublicationsList.length > 0) || editMode" class="row">
     <h3> Publications </h3>
-    <ng-container *ngFor="let publication of userPublicationsList; let i = index">
+    <ng-container *ngFor="let publication of userPublicationsList; let i = index;">
       <h4>{{publication.publication_title}}</h4>
       <small *ngIf="publication.date_published">Published on {{helperService.convertToFormattedString(publication.date_published, 'll')}}</small>
       <ng-container *ngIf="true; let short_desc">
@@ -81,7 +84,7 @@
 
   <div *ngIf="(userProjectsList && userProjectsList.length > 0) || editMode" class="row">
     <h3> Projects </h3>
-    <ng-container *ngFor="let project of userProjectsList">
+    <ng-container *ngFor="let project of userProjectsList; let i = index;">
       <h4>{{project.project_name}}</h4>
       <small *ngIf="project.date_finished">Completed on {{helperService.convertToFormattedString(project.date_finished, 'll')}}</small>
       <ng-container *ngIf="true; let short_desc">
