--- a/client/src/app/components/simple-tag/simple-tag.component.scss
+++ b/client/src/app/components/simple-tag/simple-tag.component.scss
@@ -21,12 +21,12 @@ $status-bg-color: #f4f5f8;
     position: relative;
     background-color: transparent;
     color: rgba($tag-normal-color, 0.84);
-    padding: 3px 13px;
-    margin-right: 5px;
+    padding: 6px 15px;
     border-radius: 500px;
     text-transform: capitalize;
     font-family: 'Poppins', sans-serif;
-    font-size: 0.8em;
+    font-size: 14px;
+    line-height: 16px;
     border: solid 1px rgba($tag-normal-color, 0.1);
     background-clip: padding-box;
     &.tag-green {
@@ -65,8 +65,7 @@ $status-bg-color: #f4f5f8;
         flex-direction: column;
         justify-content: center;
         align-content: flex-start;
-        padding: 10px 15px;
-        font-size: 0.9em;
+        padding: 5px 15px;
         border-radius: 18px;
         .ellipse-container {
             display: flex;
@@ -74,28 +73,24 @@ $status-bg-color: #f4f5f8;
             justify-content: flex-start;
             height: 12px;
             mat-icon {
-                font-size: 0.8em;
+                font-size: 8px;
                 color: rgba(#000000, 0.2);
                 width: initial;
                 height: initial;
-                margin: 0 2px;
+                margin-right: 2px;
                 cursor: pointer;
                 &.active {
                     color: $tag-green-color;
                 }
             }
-            :first-child,
-            :last-child {
-                margin: 0;
-            }
         }
         mat-icon.remove-icon {
             position: absolute;
-            top: 10px;
+            top: 4px;
             right: 5px;
-            font-size: 20px;
-            width: 20px;
-            height: 20px;
+            font-size: 16px;
+            width: 16px;
+            height: 16px;
             color: rgba(#000000, 0.2);
             cursor: pointer;
             &:hover {
@@ -104,7 +99,7 @@ $status-bg-color: #f4f5f8;
         }
     }
     &.tag-control {
-        padding: 10px 30px 10px 15px;
+        padding: 5px 25px 5px 15px;
     }
     .tag-remove {
         display: none;
