Update styles in user profile page (edit mode)

--- a/client/src/app/components/main-section/main-section.component.html
+++ b/client/src/app/components/main-section/main-section.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="selectedNavMenu === 'profile'">
 
-  <div *ngIf="(userGeneralInfo && userGeneralInfo.user_intro) || editMode" class="row">
+  <div *ngIf="(userGeneralInfo && userGeneralInfo.user_intro) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> About Me </h3>
     <ng-container *ngIf="true; let short_desc">
       <p *ngIf="userGeneralInfo.user_intro" [class.short-desc]="short_desc && userGeneralInfo.user_intro.length > helperService.shortDescLength">{{short_desc && !editMode ? helperService.shortDescription(userGeneralInfo.user_intro) : userGeneralInfo.user_intro}}</p>
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div *ngIf="(educationList && educationList.length > 0) || editMode" class="row">
+  <div *ngIf="(educationList && educationList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> Education </h3>
     <ng-container *ngFor="let education of educationList; let i = index">
       <a href="/my-profile">{{education.user_specified_school_name ? education.user_specified_school_name : education.school_name}}</a>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div *ngIf="(experienceList && experienceList.length > 0) || editMode" class="row">
+  <div *ngIf="(experienceList && experienceList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> Work Experience </h3>
     <ng-container *ngFor="let experience of experienceList; let i = index;">
       <a href="/my-profile">{{experience.user_specified_company_name ? experience.user_specified_company_name : experience.company_name}}</a>
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div *ngIf="(userPublicationsList && userPublicationsList.length > 0) || editMode" class="row">
+  <div *ngIf="(userPublicationsList && userPublicationsList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> Publications </h3>
     <ng-container *ngFor="let publication of userPublicationsList; let i = index;">
       <h4>{{publication.publication_title}}</h4>
@@ -82,7 +82,7 @@
     </div>
   </div>
 
-  <div *ngIf="(userProjectsList && userProjectsList.length > 0) || editMode" class="row">
+  <div *ngIf="(userProjectsList && userProjectsList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> Projects </h3>
     <ng-container *ngFor="let project of userProjectsList; let i = index;">
       <h4>{{project.project_name}}</h4>
@@ -100,7 +100,7 @@
     </div>
   </div>
 
-  <div *ngIf="(userSkillsList && userSkillsList.length > 0) || editMode" class="row">
+  <div *ngIf="(userSkillsList && userSkillsList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> Skills </h3>
     <div *ngIf="editMode" class="form-field search" [formGroup]="skillsSearchForm">
       <mat-form-field appearance="standard" class="search">
@@ -117,7 +117,7 @@
     <simple-tag *ngFor="let skill of userSkillsList; let i = index" type="gray" title="{{skill.skill}}" ellipseTag="true" value="{{skill.skill_level}}" (levelChanged)="onLevelChanged($event, i)" (removeClick)="removeUserSkillsData(i, skill)" [isControl]="editMode"></simple-tag>
   </div>
 
-  <div *ngIf="(userInterestsList && userInterestsList.length > 0) || editMode" class="row">
+  <div *ngIf="(userInterestsList && userInterestsList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> Interests </h3>
     <div *ngIf="editMode" class="form-field search" [formGroup]="interestsSearchForm">
       <mat-form-field appearance="standard" class="search">
@@ -134,7 +134,7 @@
     <simple-tag *ngFor="let interest of userInterestsList; let i = index" type="gray" title="{{interest.interest}}" [removeTag]="editMode" (click)="removeUserInteretsData(i, interest)"></simple-tag>
   </div>
 
-  <div *ngIf="(externalResourcesList && externalResourcesList.length > 0) || editMode" class="row">
+  <div *ngIf="(externalResourcesList && externalResourcesList.length > 0) || editMode" class="row" [class.edit-mode]="editMode">
     <h3> External Resources </h3>
     <div>
       <div class="img-tag" *ngFor="let resource of externalResourcesList">
