--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -20,6 +20,7 @@
     [userPublicationsList]="userPublicationsList"
     [externalResourcesList]="externalResourcesList"
     [editMode]="isEditProfile"
+    [class.edit-mode]="isEditProfile"
   ></main-section> 
 </ng-container>
 
