--- a/client/src/app/components/main-section/main-section.component.scss
+++ b/client/src/app/components/main-section/main-section.component.scss
@@ -4,10 +4,23 @@
   margin: 0 40px 0 0;
   // padding: 15px;
   // min-height: 100%;
-  background: white;
   border-radius: 5px;
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
+  box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
+  background-color: transparent;
+  &.edit-mode {
+    box-shadow: none;
+  }
+  :first-child {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  :last-child {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  
   .row {
+    background: white;
     padding: 25px 20px;
     border-bottom: 1px solid map-get($md-cfaccent, 50);
     .btn-container {
@@ -34,6 +47,10 @@
       margin-bottom: 10px;
       font-size: 16px;
       line-height: 24px;
+    }
+    &.edit-mode {
+      box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
+      margin-bottom: 10px;
     }
   }
   simple-tag {
