--- a/client/src/app/components/header-section/header-section.component.scss
+++ b/client/src/app/components/header-section/header-section.component.scss
@@ -106,10 +106,14 @@ small {
   display: flex;
   align-items: center;
   // min-width: 255px;
-  padding-right: 10px;
-  margin-bottom: 15px;
+  padding-right: 25px;
+  margin-bottom: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: rgba(map-get($md-cfaccent, 500), .84);
   label {
-    font-size: 14px;
     color: rgba(map-get($md-cfaccent, 500), .34);
     margin-right: 5px;
   }
@@ -132,12 +136,24 @@ small {
   .user-photo {
     width: 125px;
     height: 125px;
-    margin-right: 15px;
+    margin-right: 30px;
   }
   .user-detail {
     display: inline-flex;
     flex-direction: column;
     flex: 1;
+    h1 {
+      font-family: 'Poppins', sans-serif;
+      font-size: 30px;
+      line-height: 34px;
+      font-weight: 600;
+    }
+    h4 {
+      font-family: 'Roboto', sans-serif;
+      font-size: 16px;
+      line-height: 21px;
+      margin-bottom: 20px;
+    }
     .user-info {
       display: inline-flex;
     }
@@ -185,7 +201,7 @@ small {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 991px) {
   .user-row {
     padding: 20px 20px;
     flex-direction: column;
@@ -193,6 +209,7 @@ small {
     .user-photo {
       width: 110px;
       height: 110px;
+      margin-right: 0;
     }
     .user-detail {
       h1, h4 {
@@ -201,6 +218,13 @@ small {
     }
     .user-status  {
       flex-direction: row;
+      & > * {
+        margin: 5px;
+      }
+    }
+    .edit-form {
+      margin-top: 30px;
+      justify-content: space-evenly;
     }
   }
 }
@@ -219,5 +243,20 @@ small {
         margin-top: 15px;
       }
     }
+    .edit-form {
+      .form-field {
+        grid-template: 
+          "field" auto 
+          / 270px;
+        &.name-field {
+          grid-template: 
+          "first last" auto 
+          / 125px 145px;
+        }
+      }
+    }
+  }
+  small {
+    padding-right: 0;
   }
 }
