--- a/client/src/app/components/nav-section/nav-section.component.scss
+++ b/client/src/app/components/nav-section/nav-section.component.scss
@@ -67,6 +67,13 @@
 
 @media only screen and (max-width: 991px) {
   :host {
-    display: none;
+    grid-area: main-nav;
+    margin: 0 40px 30px 40px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  :host {
+    margin: 0 20px 30px 20px;
   }
 }
