--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -446,28 +446,37 @@ action-button {
   box-sizing: border-box;
 }
 
-mat-dialog-container {
-  position: relative;
-  width: 100vw !important;
-  border-radius: 20px !important;
-  max-width: 880px !important;
-  min-width: 310px !important;
-  dialog-content {
-    width: 100%;
-    @include flex(column, center, flex-start);
-    mat-icon.cancel {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      color: map-get($md-cfprimary, 500);
+.edit-dialog-container {
+  mat-dialog-container {
+    position: relative;
+    border-radius: 20px;
+    margin: 0 40px;
+    dialog-content {
+      width: 100%;
+      @include flex(column, center, flex-start);
+      mat-icon.cancel {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: map-get($md-cfprimary, 500);
+      }
+      mat-dialog-content {
+        width: 75%;
+        max-width: 615px;
+        min-width: 280px;
+        box-sizing: border-box;
+      }
+      mat-dialog-actions {
+        margin-bottom: 0 !important;
+      }
     }
-    mat-dialog-content {
-      width: 75%;
-      max-width: 615px;
-      min-width: 280px;
-    }
-    mat-dialog-actions {
-      margin-bottom: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .edit-dialog-container {
+    mat-dialog-container {
+      margin: 0 20px;
     }
   }
 }
