--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template:
   " hero hero " auto 
-  " lege edit " 60px
+  " lege lege " 60px
   " left main-nav " 0
   " left main " auto
   / 300px auto
@@ -28,26 +28,27 @@
 
 legend {
   grid-area: lege;
-  margin-left: 40px;
-  @include flex(row, center, flex-start);
-  h3 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    margin: 0;
-    line-height: 30px;
-    color: rgba(map-get($md-cfaccent, 500), .24);
+  margin:0 40px;
+  @include flex(row, center, space-between);
+  .nav-title {
+    @include flex(row, center, flex-start);
+    h3 {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      font-size: 20px;
+      margin: 0;
+      line-height: 30px;
+      color: rgba(map-get($md-cfaccent, 500), .24);
+    }
+    mat-icon {
+      color: map-get($md-cfprimary, 500);
+      display: none;
+      margin-left: 10px;
+      font-size: 20px;
+      width: 20px;
+      height: 20px;
+    }
   }
-  mat-icon {
-    color: map-get($md-cfprimary, 500);
-    display: none;
-  }
-}
-
-.edit-button {
-  grid-area: edit;
-  margin-right: 40px;
-  @include flex(row, center, flex-end);
   a {
     font-size: 12px;
     color: map-get($md-cfprimary, 500);
@@ -65,7 +66,7 @@ legend {
     display: grid;
     grid-template:
     " hero hero " auto 
-    " lege edit " 60px
+    " lege lege " 60px
     " left main-nav " auto
     " left main " auto
     / 0 auto
@@ -73,24 +74,25 @@ legend {
     grid-column-gap: 0;
   }
   legend {
-    grid-area: edit;
-    h3 {
-      color: map-get($md-cfprimary, 500);
-    }
-    mat-icon {
-      display: block;
+    .nav-title {
+      cursor: pointer;
+      h3 {
+        color: map-get($md-cfprimary, 500);
+      }
+      mat-icon {
+        display: block;
+      }
     }
   }
 }
 
 @media only screen and (max-width: 480px) {
   legend {
-    grid-area: edit;
-    margin-left: 20px;
+    margin: 0 20px;
   }
-  .edit-button {
-    margin-right: 20px;
-  }
+  // .edit-button {
+  //   margin-right: 20px;
+  // }
 }
 
 //TODO: On mobile view get the search panel to open and close...
