--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -3,8 +3,8 @@
 </ng-container>
 
 <ng-container *ngIf="!isProfileLoading">
-  <legend (click)="onClickTogggle()">
-    <div class="nav-title">
+  <legend id="legend">
+    <div class="nav-title" (click)="onClickTogggle()">
       <h3 class="section-title">Profile</h3>
       <mat-icon>menu</mat-icon>
     </div>
