--- a/client/src/app/pages/user-profile/user-profile.component.scss
+++ b/client/src/app/pages/user-profile/user-profile.component.scss
@@ -28,7 +28,8 @@
 
 legend {
   grid-area: lege;
-  margin:0 40px;
+  padding:0 40px;
+  box-sizing: border-box;
   @include flex(row, center, space-between);
   .nav-title {
     @include flex(row, center, flex-start);
@@ -55,6 +56,17 @@ legend {
     @include disable-select();
     cursor: pointer;
   }
+  // &.legend-fixed {
+  //   position: fixed;
+  //   margin: 0;
+  //   height: 60px;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   background-color: $secondary-bg-color;
+  //   box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.125);
+  //   z-index: 100;
+  // }
 }
 
 .section-title {
@@ -83,16 +95,24 @@ legend {
         display: block;
       }
     }
+    &.legend-fixed {
+      position: fixed;
+      margin: 0;
+      height: 60px;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: $secondary-bg-color;
+      box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.125);
+      z-index: 100;
+    }
   }
 }
 
 @media only screen and (max-width: 480px) {
   legend {
-    margin: 0 20px;
+    padding: 0 20px;
   }
-  // .edit-button {
-  //   margin-right: 20px;
-  // }
 }
 
 //TODO: On mobile view get the search panel to open and close...
